JumpScript/tests/baselines/reference/parserBreakStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserBreakStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserBreakStatement1.d.jump (1 errors) ====
    break;
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.